--- a/DeepSick/src/pages/HomePage.css
+++ b/DeepSick/src/pages/HomePage.css
@@ -32,9 +32,9 @@
 }
 
 .animation-container {
-  width: 500px;
-  height: 300px;
-  display: flex;
+  width: 80%;
+  height: auto;
+  aspect-ratio: 16 / 9;
   justify-content: center;
   align-items: center;
   margin: 2rem 0;
