--- a/DeepSick/src/components/DreamList/DreamList.css
+++ b/DeepSick/src/components/DreamList/DreamList.css
@@ -53,8 +53,8 @@
 /* 添加梦想按钮样式 */
 .add-button {
   position: absolute;
-  right: 20px;
-  bottom: 20px;
+  right: 0px;
+  bottom: 0px;
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -119,6 +119,8 @@
 }
 
 .canceladd-button {
+  margin-top: -18px;
+  /* 往上提一点，可根据需求调大 */
   width: 36px;
   height: 36px;
   border-radius: 50%;
